# Django

./: requirements.txt
ch08www/ch08www/: settings.py  urls.py
ch08www/myapp/: .admin.py.swp  admin.py  models.py  urls.py  views.py
ch08www/mysite/: urls.py  views.py
ch08www/templates/: base.html  footer.html  header.html
ch08www2/: Pipfile  manage.py
ch08www2/ch08www2/: asgi.py  settings.py  urls.py  wsgi.py
ch08www2/mysite/: admin.py  models.py  urls.py  views.py
ch08www2/templates/: base.html  footer.html  header.html
mblog/mainsite/: admin.py  models.py  urls.py  views.py
mblog/mblog/: settings.py  urls.py
mblog/templates/: base.html  footer.html  header.html
modelTest/modelTest/: settings.py  urls.py
modelTest/myApp/: admin.py  models.py  urls.py  views.py
modelTest/templates/: footer.html  index.html
mynewsite/: requirements.txt
mynewsite/myapp/: admin.py  models.py  urls.py  views.py
mynewsite/mynewsite/: settings.py  urls.py
mysite2/: Pipfile
mysiteOffical/: .pyproject.toml.swp  manage.py  pyproject.toml
mysiteOffical/mysiteOffical/: .settings.py.swp  asgi.py  settings.py  urls.py  wsgi.py
mysiteOffical/polls/: .models.py.swp  .tests.py.swp  .urls.py.swp  .views.py.swp  models.py  tests.py  urls.py  views.py
mysiteOffical/polls/migrations/: 0001_initial.py
mysiteOffical/polls/templates/: index.html
mysiteOffical/polls/templates/polls/: .detail.html.swp  .index.html.swo  .index.html.swp  .results.html.swp  detail.html  results.html
templateTest/: manage.py
templateTest/engTV/: apps.py  url.py  views.py
(+85 files in other folders)
