[tool.poetry]
name = "mysiteoffical"
version = "0.1.0"
description = ""
authors = ["andy <zhangruibin021@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = '^3.2'
pymysql = '*'

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
